--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 	<div class="wrapper-form">
 		<form class="reg-form" action="#">
 			<p class="reg-form__icon">
-				<img src="img/sign_up_icon.png" alt="sign up icon">
+				<img class="reg-form__icon--img" src="img/sign_up_icon.png" alt="sign up icon">
 			</p>
 			<h2 class="reg-form__heading">Create your free account</h2>
 			<p class="reg-form__info reg-form__info--top">
-				Come and join our cool and amazing community, fill in your details to get started. Already have an account? <a class="link-form" href="#">Log in.</a>
+				Come and join our cool and amazing community, fill in your details <br> to get started. Already have an account? <a class="link-form" href="#">Log in.</a>
 			</p>
-			<fieldset class="user-data">
-				<input class="user-data__input user-data__input--first-name" type="text" name="first-name" value="First name">
-				<input class="user-data__input user-data__input--last-name" type="text" name="last-name" value="Last name">
-				<input class="user-data__input user-data__input--email" type="email" name="email-address" value="Email address">
-				<input class="user-data__input user-data__input--password" type="password" name="pass" value="">
+			<fieldset class="fieldset fieldset__user-data">
+				<input class="user-data user-data__first-name" type="text" name="first-name" placeholder="First name">
+				<input class="user-data user-data__last-name" type="text" name="last-name" placeholder="Last name">
+				<input class="user-data user-data__email" type="email" name="email-address" placeholder="Email address">
+				<input class="user-data user-data__password" type="password" name="pass" placeholder="Password">
 			</fieldset>
-			<fieldset class="Send-data">
-				<button class="Send-data__btn">Sign up for free</button>
+			<fieldset class="fieldset fieldset__send-data">
+				<button class="send-data__btn">Sign up for free</button>
 			</fieldset>
 			<p class="reg-form__info reg-form__info--bottom">
-				By clicking on “Sign up for free”, you agree to the <a class="link-form" href="#">Terms of Service</a>and the <a class="link-form" href="#">Privacy Policy</a>
+				By clicking on “Sign up for free”, you agree to the <a class="link-form" href="#">Terms of Service</a> and the <a class="link-form" href="#">Privacy Policy</a>
 			</p>
 		</form>
 	</div>
